--- a/css/broad.css
+++ b/css/broad.css
@@ -1,154 +1,168 @@
-*{
-     margin: 0;
-     padding: 0;
-     font-family: "微软雅黑";
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "微软雅黑";
 }
- body{
-     position: relative;
-     overflow-x:hidden ;
+body {
+  position: relative;
+  overflow-x: hidden ;
 }
- a{
-     text-decoration: none;
-     cursor: pointer;
-     -webkit-tap-highlight-color:rgba(255,0,0,0) 
+a {
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
-.wrapper{
-    height: 100%;
+.wrapper {
+  height: 100%;
 }
-body,html{
-    height: 100%;
+body,
+html {
+  height: 100%;
 }
- img{
-     width: 100%;
-     height: 100%;
+img {
+  width: 100%;
+  height: 100%;
 }
-div{ cursor: pointer;}
-li{list-style: none; cursor: pointer; cursor: pointer;}
-span{ cursor: pointer;}
-.blue{
-     border-bottom: 0.08695652173913043rem solid #4285f4;
-     color: #4285F4 !important;
+div {
+  cursor: pointer;
 }
-.small{
-     font-size: 0.6956521739130435rem !important;
+li {
+  list-style: none;
+  cursor: pointer;
 }
- .banner{
-     width: 16.304347826086957rem;
-     height: 8.391304347826088rem;
-     box-shadow: 0rem 0.043478260869565216rem 0.426666rem 0rem rgba(66, 133, 244, 0.27);
-     margin-bottom: 0.43478260869565216rem;
+span {
+  cursor: pointer;
 }
- .nav{
-     width: 14.93333333333333rem;
-      margin: 0 auto;
-     height: 1.8478260869565217rem;
-     overflow: hidden;
-     border-bottom: 0.043478260869565216rem solid #ebebeb;
+.blue {
+  border-bottom: 0.08rem solid #4285f4;
+  color: #4285F4 !important;
 }
- .con{
-     width: 16.304347826086957rem;
-     min-height: 14rem;
-     padding-bottom: 2.56rem;
+.small {
+  font-size: 0.64rem !important;
 }
- .intr{
-     width: 15.36rem;
-     padding-left: 0.64rem;
-     height: 5.369565217391305rem;
-     box-shadow: 0rem 0.16rem 0.426666rem 0rem rgba(66, 133, 244, 0.27);
-     margin-bottom: 0.5333333333333333rem;
-     position: relative;
-     overflow: hidden;
+.banner {
+  width: 15.28rem;
+  height: 7.86rem;
+  box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
+  margin-bottom: 0.4rem;
 }
- .int_tit{
-     margin-top: 1.0869565217391304rem;
-     width: 12.478260869565217rem;
-     height: 0.7391304347826086rem;
-     color: #333333;
-     font-size: 0.7391304347826086rem;
+.nav {
+  width: 13.98rem;
+  margin: 0 auto;
+  height: 1.72rem;
+  overflow: hidden;
+  border-bottom: 0.04rem solid #ebebeb;
 }
- .int_p{
-     width: 100%;
-     height: 1.608695652173913rem;
-     line-height: 1.608695652173913rem;
-     font-size: 0.6521739130434783rem;
-     color: #4c4c4c;
+.con {
+  width: 15.28rem;
+  min-height: 14rem;
+  padding-bottom: 2.4rem;
 }
- .int_foot{
-     width: 100%;
-     overflow: hidden;
+.intr {
+  width: 14.4rem;
+  padding-left: 0.6rem;
+  height: 4.62rem;
+  box-shadow: 0rem 0.14rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
+  margin-bottom: 0.5rem;
+  position: relative;
+  overflow: hidden;
 }
- .int_zi{
-     float: left;
-     width: 5.043478260869565rem;
-     font-size: 1.173913043478261rem;
-     color: #ffa100;
+.int_tit {
+  margin-top: 0.6rem;
+  width: 11.68rem;
+  height: 0.68rem;
+  color: #333333;
+  font-size: 0.68rem;
 }
- .int_peo{
-    float: left;
-    width: 2.9565217391304346rem;
-    height: 0.8695652173913043rem;
-    line-height: 1.3043478260869565rem;
-    font-size: 0.5217391304347826rem;
-    color: #808080;
-    margin-top: 0.37rem;
+.int_p {
+  width: 100%;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  font-size: 0.6rem;
+  color: #4c4c4c;
+  margin-top: 0.1rem;
 }
- .guan{
-     width: 4.466666666666667rem;
-     height: 0.717391304347826rem;
-     font-size: 0.4693333333333333rem;
-     color: #999999;
-     text-align: center;
-     line-height: 0.717391304347826rem;
-     position: absolute;
-     top: 2.108695652173913rem;
-     right: 0.8695652173913043rem;
+.int_foot {
+  width: 100%;
+  overflow: hidden;
 }
- .int_img{
-     width: 100%;
-     height: auto;
+.int_zi {
+  float: left;
+  font-size: 1.1rem;
+  color: #ffa100;
+  margin-right: 0.3rem;
 }
- .int_img img{
-     width: 100%;
-     height: auto;
+.int_peo {
+  float: left;
+  width: 2.76rem;
+  height: 0.8rem;
+  line-height: 1rem;
+  font-size: 0.48rem;
+  color: #808080;
+  margin-top: 0.34rem;
 }
- .bao{
-     width: 100%;
-     height: 2.0869565217391304rem;
-     line-height: 2.0869565217391304rem;
-     text-align: center;
-     font-size: 0.7391304347826086rem;
-     color: #4285F4;
-     background: rgba(245,245,245,.92);
-     position: fixed;
-     bottom: 0;
-     z-index: 5;
+.guan {
+  height: 0.66rem;
+  font-size: 0.48rem;
+  color: #666;
+  text-align: center;
+  line-height: 0.66rem;
+  position: absolute;
+  top: 1.8rem;
+  right: 0.4rem;
 }
- .bro_tit{
- 	margin:  0 auto;
-     width: 15.23913043478261rem;
-     height: 1.2391304347826086rem;
-     border-bottom: 0.043478260869565216rem solid #ebebeb;
-     line-height: 1.2391304347826086rem;
-     font-size: 0.6521739130434783rem;
-     color: #4285f4;
+.int_img {
+  width: 100%;
+  height: auto;
 }
- .bro_tit img{
-     vertical-align: middle;
-     margin-right: 0.2391304347826087rem;
-     width: 0.08695652173913043rem;
-     height: 0.5869565217391305rem;
-     margin-top: -0.043478260869565216rem;
+.int_img img {
+  width: 100%;
+  height: auto;
 }
- .int_p span{    color: #4285F4;
-    border: 1px solid #4285F4;
-    width: 2.9652173913043477rem;
-    float: right;
-    margin-right: 10rem;
-    margin-top: 0.384rem;
-    height: 0.7391304347826086rem;
-    display: block;
-    font-size: 0.43478260869565216rem;
-    text-align: center;
-    line-height: 0.7391304347826086rem;
-    border-radius: 0.0853333333333333rem;
-    }
+.bao {
+  width: 100%;
+  height: 1.94rem;
+  line-height: 1.94rem;
+  text-align: center;
+  font-size: 0.68rem;
+  color: #4285F4;
+  background: rgba(245, 245, 245, 0.92);
+  position: fixed;
+  bottom: 0;
+  z-index: 5;
+}
+.bro_tit {
+  margin: 0 auto;
+  width: 14.28rem;
+  height: 1.16rem;
+  border-bottom: 0.04rem solid #ebebeb;
+  line-height: 1.16rem;
+  font-size: 0.6rem;
+  color: #4285f4;
+  position: relative;
+  padding-left: 0.2rem;
+}
+.bro_tit::after {
+  content: '';
+  position: absolute;
+  background: #4285f4;
+  width: 0.08rem;
+  height: 0.48rem;
+  left: 0;
+  top: 0.34rem;
+  border-radius: 999px;
+}
+.int_p span {
+  color: #4285F4;
+  border: 1px solid #4285F4;
+  float: right;
+  margin-right: 10rem;
+  margin-top: 0.36rem;
+  height: 0.68rem;
+  display: block;
+  font-size: 0.4rem;
+  text-align: center;
+  line-height: 0.68rem;
+  border-radius: 0.06rem;
+  padding: 0 0.06rem;
+}
