--- a/css/code.css
+++ b/css/code.css
@@ -1,298 +1,302 @@
-*{
-     margin: 0;
-     padding: 0;
-     font-family: "微软雅黑";
-      -webkit-tap-highlight-color: transparent;
-     -webkit-tap-highlight-color:rgba(255,0,0,0) 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "微软雅黑";
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
- body{
-     overflow-x:hidden ;
+body {
+  overflow-x: hidden ;
 }
-.wrapper{
-    height: 100%;
+.wrapper {
+  height: 100%;
 }
-html,body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
- a{
-     text-decoration: none;
-     cursor: pointer;
-     -webkit-tap-highlight-color:rgba(255,0,0,0) 
+a {
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
- img{
-     width: 100%;
-     height: 100%;
+img {
+  width: 100%;
+  height: 100%;
 }
- div{
-     cursor: pointer;
+div {
+  cursor: pointer;
 }
- li{
-     list-style: none;
-     cursor: pointer;
-     cursor: pointer;
-     -webkit-tap-highlight-color:rgba(255,0,0,0);
+li {
+  list-style: none;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
- span{
-     cursor: pointer;
+span {
+  cursor: pointer;
 }
- input[type=submit],input[type=reset],input[type=button],input[type=text]{
-     -webkit-appearance:none;
-     outline: none;
+input[type=submit],
+input[type=reset],
+input[type=button],
+input[type=text] {
+  -webkit-appearance: none;
+  outline: none;
 }
- ::-webkit-input-placeholder {
-    /* WebKit browsers */
-     color: #ccc;
+::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #ccc;
 }
- :-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
-     color: #ccc;
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #ccc;
 }
- ::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-     color: #ccc;
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #ccc;
 }
- :-ms-input-placeholder {
-    /* Internet Explorer 10+ */
-     color: #ccc;
+:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #ccc;
 }
- .blue{
-     /*border-bottom: 0.08695652173913043rem solid #4285f4;*/
-     color: #4285F4 !important;
-}.header{
-     width: 16.304347826086957rem;
-     height: 6.739130434782608rem;
-     background-color: #4285f4;
-     overflow: hidden;
+.blue {
+  /*border-bottom: 4/@base solid #4285f4;*/
+  color: #4285F4 !important;
 }
-.header{ background: url(../img/our_bg.png) no-repeat; background-size: 100% 100%; position: relative; }
-.head_con{
-     width: 14.304347826086957rem;
-     height: 2.8260869565217392rem;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     margin-left: -7.1521739130434785rem;
-     margin-top: -1.4130434782608696rem;
+.header {
+  width: 15.28rem;
+  height: 6.3rem;
+  background-color: #4285f4;
+  overflow: hidden;
 }
- .head_fl{
-     float: left;
-     height: 2.8260869565217392rem;
-     width: 2.8260869565217392rem;
-     border-radius: 50%;
-     overflow: hidden;
-     margin-right: 0.6521739130434783rem;
+.header {
+  background: url(../img/our_bg.png) no-repeat;
+  background-size: 100% 100%;
+  position: relative;
 }
- .head_cc{
- 	float: left;
-     width: 10.391304347826088rem;
-     height: 2.8260869565217392rem;
+.head_con {
+  width: 13.4rem;
+  height: 2.64rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -7.15217391rem;
+  margin-top: -1.41304348rem;
 }
- .head_cc p{
-     height: 1.4782608695652173rem;
-     line-height: 1.4782608695652173rem;
-     font-size: 0.6521739130434783rem;
-     color: white;
-     width:100% ;
+.head_fl {
+  float: left;
+  height: 2.64rem;
+  width: 2.64rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 0.6rem;
 }
- .headc_font{
-     width: 100%;
-     height: 0.6956521739130435rem;
-     line-height: 0.6956521739130435rem;
-     font-size: 0.4782608695652174rem;
-     color: white;
+.head_cc {
+  float: left;
+  width: 9.74rem;
+  height: 2.64rem;
 }
- .headc_font span{
-    float: left;
-    width: 1.891304347826087rem;
-    height: 0.6956521739130435rem;
-    line-height: 0.6956521739130435rem;
-    text-indent: 0.7695652173913043rem;
-    background: url(../img/our.png) no-repeat -0rem -2.57rem;
-    background-size: 0.6956521739130435rem;
+.head_cc p {
+  height: 1.38rem;
+  line-height: 1.38rem;
+  font-size: 0.6rem;
+  color: white;
+  width: 100% ;
 }
- .lines{
-     width: 0.08695652173913043rem;
-     height: 0.5652173913043478rem;
-     background-color: white;
-     margin-right: 0.41304347826086957rem;
-     float: left;
+.headc_font {
+  width: 100%;
+  height: 0.64rem;
+  line-height: 0.64rem;
+  font-size: 0.44rem;
+  color: white;
 }
- .headc_font a{
-    float: left;
-    width: 1.891304347826087rem;
-    height: 0.6956521739130435rem;
-    color: white;
-    text-indent: 0.7391304347826086rem;
-    background: url(../img/book.png) no-repeat 0rem;
-    background-size: 0.5333333333333333rem;
+.headc_font span {
+  float: left;
+  width: 1.76rem;
+  height: 0.64rem;
+  line-height: 0.64rem;
+  text-indent: 0.72rem;
+  background: url(../img/our.png) no-repeat 0rem -2.57rem;
+  background-size: 0.64rem;
 }
- .head_rt{
-     width: 0.41304347826086957rem;
-     height: 2.8260869565217392rem;
-     line-height: 2.8260869565217392rem;
-     float: left;
+.lines {
+  width: 0.08rem;
+  height: 0.52rem;
+  background-color: white;
+  margin-right: 0.38rem;
+  float: left;
 }
- .head_rt img{
-     width: 0.391304347826087rem;
-     height: auto;
+.headc_font a {
+  float: left;
+  width: 1.76rem;
+  height: 0.64rem;
+  color: white;
+  text-indent: 0.68rem;
+  background: url(../img/book.png) no-repeat 0rem;
+  background-size: 0.5rem;
 }
-
-.conten{
-     width: 16.304347826086957rem;
-     padding: 0.5652173913043478rem 0 1.8695652173913044rem 0;
-     box-shadow: 0rem 0.043478260869565216rem 0.426666rem 0rem rgba(66, 133, 244, 0.27);
+.head_rt {
+  width: 0.38rem;
+  height: 2.64rem;
+  line-height: 2.64rem;
+  float: left;
 }
- .din_con{
- 	border-bottom: 2px solid #f5f5f5;
-     width: 15.41304347826087rem;
-     height:4.565217391304348rem;
-     margin: 0 auto;
+.head_rt img {
+  width: 0.36rem;
+  height: auto;
 }
- .dinc_fl{
-     width: 4.934782608695652rem;
-     height: 3.1956521739130435rem;
-     float: left;
-     border-radius:0.21739130434782608rem;
-     overflow: hidden;
-     margin: 0.7391304347826086rem 0.4782608695652174rem 0 0.3695652173913043rem;
+.conten {
+  width: 15.28rem;
+  padding: 0.52rem 0 1.74rem 0;
+  box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
 }
- .dinc_rt{
-     width: 9.108695652173912rem;
-     height: 3.1956521739130435rem;
-     float: left;
-     margin-top: 0.7391304347826086rem;
+.din_con {
+  border-bottom: 2px solid #f5f5f5;
+  width: 14.44rem;
+  height: 4.565217391304348rem;
+  margin: 0 auto;
 }
- .dinc_rt p{
-     width: 100%;
-     height: 1.108695652173913rem;
-     line-height: 1.108695652173913rem;
-     font-size: 0.7391304347826086rem;
-     color: #333333;
-     overflow: hidden;
-     white-space: nowrap;
-     text-overflow: ellipsis;
+.dinc_fl {
+  width: 4.62rem;
+  height: 2.98rem;
+  float: left;
+  border-radius: 0.21739130434782608rem;
+  overflow: hidden;
+  margin: 0.68rem 0.44rem 0 0.34rem;
 }
- .dinc_rt span{
-     display: block;
-     height: 1.0434782608695652rem;
-     line-height: 1.0434782608695652rem;
-     font-size: 0.6521739130434783rem;
-     color: #4c4c4c;
+.dinc_rt {
+  width: 8.52rem;
+  height: 2.98rem;
+  float: left;
+  margin-top: 0.68rem;
 }
- .dincc{
-     width: 100%;
-     height: 1.0434782608695652rem;
+.dinc_rt p {
+  width: 100%;
+  height: 1.02rem;
+  line-height: 1.02rem;
+  font-size: 0.68rem;
+  color: #333333;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
- .price{
-     font-size: 0.6086956521739131rem;
-     color: #f69f07;
-     float: left;
-     height: 1.0434782608695652rem;
-     line-height: 1.2608695652173914rem;
+.dinc_rt span {
+  display: block;
+  height: 0.96rem;
+  line-height: 0.96rem;
+  font-size: 0.6rem;
+  color: #4c4c4c;
 }
- .study{
- 	float: right;
-     width: 3.130434782608696rem;
-     height: 1.0434782608695652rem;
-     border-radius: 0.10869565217391304rem;
-     background: #4285F4;
-     font-size: 0.6521739130434783rem;
-     color: white;
-     text-align: center;
-     line-height: 1.0434782608695652rem;
+.dincc {
+  width: 100%;
+  height: 0.96rem;
 }
- .time{
-     height: 1.3043478260869565rem;
-     line-height: 1.3043478260869565rem;
-     margin-left:0.3695652173913043rem;
-     font-size: 0.4782608695652174rem;
-     color: #777777;
-     float: left;
+.price {
+  font-size: 0.56rem;
+  color: #f69f07;
+  float: left;
+  height: 0.96rem;
+  line-height: 1.18rem;
 }
- .code{
-     width: 16.304347826086957rem;
-     height: 5.12rem;
-     margin-bottom: 0.43478260869565216rem;
-     position: relative;
+.study {
+  float: right;
+  width: 2.92rem;
+  height: 0.96rem;
+  border-radius: 0.1rem;
+  background: #4285F4;
+  font-size: 0.6rem;
+  color: white;
+  text-align: center;
+  line-height: 0.96rem;
 }
- .code_con{
-     width: 13.08695652173913rem;
-     height: 1.9565217391304348rem;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     margin-top: -0.9782608695652174rem;
-     margin-left: -6.543478260869565rem;
+.time {
+  height: 1.22rem;
+  line-height: 1.22rem;
+  margin-left: 0.3695652173913043rem;
+  font-size: 0.44rem;
+  color: #777777;
+  float: left;
 }
- .tex{
-     width: 10.782608695652174rem;
-     height: 1.834666666666667rem;
-     font-size: 0.768rem;
-     text-indent: 0.2rem;
-     border: 2px solid #dfdfdf;
-     border-radius: 0.10869565217391304rem;
-     float: left;
+.code {
+  width: 15.28rem;
+  height: 4.8rem;
+  margin-bottom: 0.4rem;
+  position: relative;
 }
- .code_btn{
-     width: 2.260869565217391rem;
-     height:1.9865217391304348rem;
-     float: left;
-     margin-left: -0.18rem;
-     background: #4285F4;
-     color: white;
-     font-size: 0.782608695652174rem;
-     border: 0;
-     border-radius: 0 0.1066666666666667rem 0.1066666666666667rem 0;
+.code_con {
+  width: 12.26rem;
+  height: 1.82rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -0.97826087rem;
+  margin-left: -6.54347826rem;
 }
- 
-
- footer{
-     width: 100%;
-     height: 2.1739130434782608rem;
-     position: fixed;
-     bottom: 0;
-     background: white;
-     z-index: 2;
-     box-shadow: 0px 2px 0.426666rem 0px rgba(66, 133, 244, 0.2);
+.tex {
+  width: 10.1rem;
+  height: 1.72rem;
+  font-size: 0.72rem;
+  text-indent: 0.18rem;
+  border: 2px solid #dfdfdf;
+  border-radius: 0.1rem;
+  float: left;
 }
- footer dl{
-     width: 25%;
-     height: 100%;
-     text-align: center;
-     float: left;
+.code_btn {
+  width: 2.1rem;
+  height: 1.9865217391304348rem;
+  float: left;
+  margin-left: -0.18rem;
+  background: #4285F4;
+  color: white;
+  font-size: 0.72rem;
+  border: 0;
+  border-radius: 0 0.1rem 0.1rem 0;
 }
- footer dl dt{
-     width: 100%;
-     height: 0.7391304347826086rem;
-     margin-top: 0.41304347826086957rem;
-     overflow: hidden;
+footer {
+  width: 100%;
+  height: 2.02rem;
+  position: fixed;
+  bottom: 0;
+  background: white;
+  z-index: 2;
+  box-shadow: 0px 2px 0.38rem 0px rgba(66, 133, 244, 0.2);
 }
- footer dl img{
-     display: block;
-     margin:0 auto ;
+footer dl {
+  width: 25%;
+  height: 100%;
+  text-align: center;
+  float: left;
 }
- footer dl dd{
-     line-height: 0.8695652173913043rem;
-     height: 0.8695652173913043rem;
-     width: 100%;
-     text-align: center;
-     color: #999999;
-     font-size: 0.4782608695652174rem;
+footer dl dt {
+  width: 100%;
+  height: 0.68rem;
+  margin-top: 0.38rem;
+  overflow: hidden;
 }
- footer dl:first-child img{
-    width: 1rem;
-    height: 0.869565217391305rem;
+footer dl img {
+  display: block;
+  margin: 0 auto ;
 }
- footer dl:nth-child(2) img{
-     width: 0.782608695652174rem;
-     height: 0.717391304347826rem;
+footer dl dd {
+  line-height: 0.8rem;
+  height: 0.8rem;
+  width: 100%;
+  text-align: center;
+  color: #999999;
+  font-size: 0.44rem;
 }
- footer dl:nth-child(3) img{
-    width: 0.8739130434782609rem;
-    height: 0.8391304347826086rem;
+footer dl:first-child img {
+  width: 1rem;
+  height: 0.8rem;
 }
- footer dl:last-child img{
-    width: 0.8739130434782609rem;
-    height: 0.9391304347826086rem;
+footer dl:nth-child(2) img {
+  width: 0.72rem;
+  height: 0.66rem;
 }
- 
+footer dl:nth-child(3) img {
+  width: 0.8rem;
+  height: 0.78rem;
+}
+footer dl:last-child img {
+  width: 0.8rem;
+  height: 0.88rem;
+}
