--- a/css/mall.css
+++ b/css/mall.css
@@ -1,309 +1,362 @@
-body{ width: 16rem; height: 100%; overflow-x: hidden;}
-::-webkit-scrollbar{ opacity: 0;}
-body,html{
-    height: 100%;
-    overflow-x: hidden;
+body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
-.wrapper{
-    height: 100%;
+::-webkit-scrollbar {
+  opacity: 0;
 }
-header{
-     width: 16rem;
-     height: 6.804347826086956rem;
+body,
+html {
+  height: 100%;
+  overflow-x: hidden;
 }
- .nav{
-     width: 16.304347826086957rem;
-     height: 3.739130434782609rem;
+.wrapper {
+  height: 100%;
 }
-.clear::after{
-    content: '';
-    display: block;
-    clear: both;
+header {
+  width: 100%;
+  height: 6.36rem;
 }
-.ban{box-shadow: 0rem 0.043478260869565216rem 0.426666rem 0rem rgba(66, 133, 244, 0.27); overflow: hidden; height: auto; width: 16rem;}
-.qian{ width: 90%; margin: 0 auto; }
-.qian img{ width: 100%; height: auto;}
- .nav dl{
-     width: 1.8173913043478262rem;
-     height: 3.739130434782609rem;
-     float: left;
+.nav {
+  width: 15.28rem;
+  height: 3.5rem;
 }
- .nav dl{
-     margin-left: 2.152173913043478rem;
+.clear::after {
+  content: '';
+  display: block;
+  clear: both;
 }
- .nav dl:nth-child(2){
-     margin-left: 3.391304347826087rem;
+.ban {
+  box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
+  overflow: hidden;
+  height: auto;
+  width: 100%;
 }
- .nav dl:last-child{
-     margin-left: 3.3043478260869565rem;
+.qian {
+  width: 14rem;
+  margin: 0 auto;
 }
- .nav dl dt{
-     width: 1.565217391304348rem;
-     height: 1.565217391304348rem;
-     border-radius: 50%;
-     overflow: hidden;
-     margin: 0 auto;
-     margin-top: 0.6521739130434783rem;
+.qian img {
+  width: 100%;
 }
- .nav dl dd{
-     width: 100%;
-     height: 1.2826086956521738rem;
-     text-align: center;
-     line-height: 1.2826086956521738rem;
-     font-size: 0.5652173913043478rem;
-     color: #333333;
+.nav dl {
+  width: 1.7rem;
+  height: 3.5rem;
+  float: left;
 }
- .mall_tit{
-     width: 16.304347826086957rem;
-     text-indent: 0.5217391304347826rem;
-     height: 1.7391304347826086rem;
-     line-height: 2.1739130434782608rem;
-     font-size: 0.6521739130434783rem;
-     color: #1a1a1a;
+.nav dl {
+  margin-left: 2rem;
 }
- .jin{
-     width:16rem;
-     overflow: hidden;
+.nav dl:nth-child(2) {
+  margin-left: 3.16rem;
 }
- .jin .pre_con{
-     margin-left: 0.43478260869565216rem;
+.nav dl:last-child {
+  margin-left: 3.08rem;
 }
- .pre_con{
-     width: 7.391304347826087rem;
-     height: 7.282608695652174rem;
-     border-radius: 0.1956521739130435rem;
-     overflow: hidden;
-     float: left;
-     margin-top: 0.43478260869565216rem;
-     box-shadow: 0rem 0.043478260869565216rem 0.426666rem 0rem rgba(66, 133, 244, 0.27);
+.nav dl dt {
+  width: 1.46rem;
+  height: 1.46rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+  margin-top: 0.6rem;
 }
- .pre_igm{
-     width: 7.391304347826087rem;
-     height: 4.782608695652174rem;
+.nav dl dd {
+  width: 100%;
+  height: 1.2rem;
+  text-align: center;
+  line-height: 1.2rem;
+  font-size: 0.52rem;
+  color: #333333;
 }
- .pre_con p{
-     width: 100%;
-     height: 1.434782608695652rem;
-     text-indent: 0.32608695652173914rem;
-     font-size: 0.6086956521739131rem;
-     color: #333333;
-     line-height: 1.434782608695652rem;
-     text-overflow: ellipsis;
-     overflow: hidden;
-     white-space: nowrap;
+.mall_tit {
+  width: 15.28rem;
+  text-indent: 0.48rem;
+  height: 1.62rem;
+  line-height: 2.02rem;
+  font-size: 0.6rem;
+  color: #1a1a1a;
 }
- .pre_con span{
-     display: block;
-     text-indent: 0.32608695652173914rem;
-     font-size: 0.8260869565217391rem;
-     color: #ffa100;
+.jin {
+  width: 100%;
+  overflow: hidden;
 }
- .look{
- 	float: left;
-     width: 100%;
-     height: 2.6956521739130435rem;
-     color: #4285f4;
-     font-size: 0.6521739130434783rem;
-     text-align: center;
-     line-height: 2.6956521739130435rem;
+.jin .pre_con {
+  margin-left: 0.4rem;
 }
-.look img{ 
-	vertical-align: middle;
-    width: 0.234667rem;
-    height: auto;
-    margin-top: -0.12rem;
-    margin-left: 0.256rem;}
- .gan_tit{
- 	 text-indent: 0.5217391304347826rem;
-     width: 15.217391304347826rem;
-     height: 2.347826086956522rem;
-     line-height: 2.347826086956522rem;
-     font-size: 0.6956521739130435rem;
-     color: #1a1a1a;
+.pre_con {
+  width: 6.92rem;
+  height: 6.74rem;
+  border-radius: 0.18rem;
+  overflow: hidden;
+  float: left;
+  margin-top: 0.4rem;
+  box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
 }
-.gan{ overflow: hidden;}
- .jihe_con{
-     width: 4.804347826086956rem;
-     height: 8.195652173913043rem;
-     border-radius: 0.1956521739130435rem;
-     overflow: hidden;
-     float: left;
+.pre_igm {
+  width: 6.92rem;
+  height: 4.48rem;
 }
- .jc_img{
-     width: 100%;
-     height: 6.369565217391305rem;
+.pre_con p {
+  width: 100%;
+  height: 1.34rem;
+  text-indent: 0.3rem;
+  font-size: 0.56rem;
+  color: #333333;
+  line-height: 1.5rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
- .jihe_con p{
-     width: 100%;
-     height: 1.3478260869565217rem;
-     line-height: 1.3478260869565217rem;
-     text-overflow: ellipsis;
-     overflow: hidden;
-     white-space: nowrap;
-     font-size: 0.6086956521739131rem;
-     color: #333333;
+.pre_con div {
+  margin-top: -13px;
 }
- .ji_pr{
-     font-size: 0.4782608695652174rem;
-     color: #fea201;
+.pre_con strong {
+  font-size: 0.52rem;
+  color: #666;
+  text-indent: 0.3rem;
+  line-height: 1rem;
+  float: left;
+  font-weight: normal;
 }
- .gan{
-     margin-bottom: 0.5434782608695652rem;
-     box-shadow: 0rem 0.043478260869565216rem 0.426666rem 0rem rgba(66, 133, 244, 0.27);
+.pre_con span {
+  text-indent: 0.3rem;
+  font-size: 0.76rem;
+  color: #ffa100;
+  float: right;
+  margin-right: 0.3rem;
 }
-.big{ width: 100%; height: 14rem; }
- .big_tit{
- 	 text-indent: 0.5217391304347826rem;
-     width: 15.217391304347826rem;
-     height: 2.347826086956522rem;
-     line-height: 2.347826086956522rem;
-     font-size: 0.6956521739130435rem;
-     color: #1a1a1a;
-    
+.look {
+  float: left;
+  width: 100%;
+  height: 2.52rem;
+  color: #4285f4;
+  font-size: 0.6rem;
+  text-align: center;
+  line-height: 2.52rem;
 }
-.over{ overflow:hidden ; width: 100%;  } 
- .jihe_con{
-     width: 4.693333333333333rem;
-     height: 8.295652173913043rem;
-     border-radius: 0.1956521739130435rem;
-     overflow: hidden;
-     margin-left: 0.512rem;
+.look img {
+  vertical-align: middle;
+  width: 0.22rem;
+  height: auto;
+  margin-top: -0.12rem;
+  margin-left: 0.24rem;
 }
-.lubo{ width: 150%;}
- .big_con{
- 	 margin-left: 0.5217391304347826rem;
- 	 float: left;
-     width: 9.782608695652174rem;
-     height: 6rem;
-     border-radius: 0.1956521739130435rem;
-     overflow: hidden;
-     margin-right: 0.6304347826086957rem;
+.gan_tit {
+  text-indent: 0.48rem;
+  width: 14.26rem;
+  height: 2.2rem;
+  line-height: 2.2rem;
+  font-size: 0.64rem;
+  color: #1a1a1a;
 }
- .big_img{
-     width: 100%;
-     height: 4.043478260869565rem;
+.gan {
+  overflow: hidden;
 }
- .big_con p{
-     display: block;
-     width: 100%;
-     height: 1.391304347826087rem;
-     text-overflow: ellipsis;
-     white-space: nowrap;
-     overflow: hidden;
-     font-size: 0.6086956521739131rem;
-     color: #333333;
-     line-height: 1.391304347826087rem;
+.jihe_con {
+  width: 4.5rem;
+  height: 7.68rem;
+  border-radius: 0.18rem;
+  overflow: hidden;
+  float: left;
 }
- .big_con span{
- 	display: block;
-     font-size: 0.4782608695652174rem;
-     color: #fea201;
+.jc_img {
+  width: 100%;
+  height: 5.96rem;
 }
- .bg{ position: fixed; top: 0; width: 16rem; height: 100%; background: rgba(0,0,0,.4); z-index: 3;}
- .coupon{
- 	z-index: 4;
-     width: 13.434782608695652rem;
-     position: fixed;
-     height: 10.673913043478262rem;
-     top: 50%;
-     left: 50%;
-     background: #191d33;
-     margin-top: -5.10869565217391304rem;
-     margin-left: -6.717391304347826rem;
-     border-radius: 0.21739130434782608rem;
+.jihe_con p {
+  width: 100%;
+  height: 1.26rem;
+  line-height: 1.26rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 0.56rem;
+  color: #333333;
 }
- .cou_tit{
-     width: 100%;
-     text-align: center;
-     color: #ffd472;
-     font-size: 0.8695652173913043rem;
-     height: 2.760869565217391rem;
-     line-height: 2.760869565217391rem;
+.ji_pr {
+  font-size: 0.52rem;
+  color: #fea201;
 }
- .pon{
- 	margin: 0 auto;
- 	background-size: 100% 100%;
-     width: 10.652173913043478rem;
-     height: 3.891304347826087rem;
-     background-image: url(../img/li_bg.png);
+.gan {
+  margin-bottom: 0.5rem;
+  box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
 }
- .pon p{
-     display: block;
-     width: 100%;
-     height: 2.3043478260869565rem;
-     text-indent: 1.0217391304347827rem;
-     font-size: 0.7391304347826086rem;
-     color: #a35014;
-     line-height: 2.3043478260869565rem;
+.big {
+  width: 100%;
+  height: 10.4rem;
+  box-shadow: 0rem 0.04rem 0.38rem 0rem rgba(66, 133, 244, 0.27);
 }
- .pon_di{
-     width: 100%;
-     height: 0.6956521739130435rem;
-     overflow: hidden;
+.big_tit {
+  text-indent: 0.48rem;
+  width: 14.26rem;
+  height: 2.2rem;
+  line-height: 2.2rem;
+  font-size: 0.64rem;
+  color: #1a1a1a;
 }
- .pon_di a{
-     font-size: 0.5869565217391305rem;
-     color: #c07e42;
+.over {
+  overflow: hidden ;
+  width: 100%;
 }
- .pon_di a:first-child{
-     margin-left: 1.0869565217391304rem;
-     float: left;
+.jihe_con {
+  width: 4.4rem;
+  height: 7.76rem;
+  border-radius: 0.18rem;
+  overflow: hidden;
+  margin-left: 0.48rem;
 }
- .pon_di a:last-child{
-     margin-right: 1.0869565217391304rem;
-     float: right;
+.lubo {
+  width: 150%;
 }
- .rightoff{
-     width: 10.217391304347826rem;
-     height: 2.130434782608696rem;
-     margin: 0.8478260869565217rem auto;
-     border-radius: 1.0434782608695652rem;
-     background: #e62233;
-     text-align: center;
-     line-height: 2.130434782608696rem;
-     font-size: 0.8260869565217391rem;
-     color: white;
+.big_con {
+  margin-left: 0.48rem;
+  float: left;
+  width: 9.16rem;
+  height: 6rem;
+  border-radius: 0.18rem;
+  overflow: hidden;
+  margin-right: 0.58rem;
 }
- .cuo{
-    width: 1.652174rem;
-    height: 1.652174rem;
-    position: absolute;
-    top: 0.539130434782609rem;
-    background: url(../img/gen.png) no-repeat;
-    background-size: 2.3913rem;
+.big_img {
+  width: 100%;
+  height: 3.78rem;
 }
- .doubt{
-    width: 1.652174rem;
-    height: 1.652174rem;
-    position: absolute;
-    top: 0.539130434782609rem;
-    right: 0;
-    background: url(../img/gen.png) no-repeat -0.5rem -1.78rem;
-    background-size: 2.3913rem;
+.big_con p {
+  display: block;
+  width: 100%;
+  height: 1.3rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 0.56rem;
+  color: #333333;
+  line-height: 1.3rem;
 }
-.cou_thr,.bg,.coupon,.cou_two{
-     display: none;
+.big_con span {
+  display: block;
+  font-size: 0.52rem;
+  color: #fea201;
 }
- .two_tit{
-     height: 1.0434782608695652rem;
-     line-height: 1.0434782608695652rem;
-     font-size: 0.6086956521739131rem;
-     color: #ffd472;
-     width: 11.304347826086957rem;
-     margin-left: 1.0869565217391304rem;
+.bg {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 3;
 }
- .cou_two p{
-     line-height: 0.782608695652174rem;
-     font-size: 0.6086956521739131rem;
-     color: #ffd472;
-     width: 11.304347826086957rem;
-     margin-left: 1.0869565217391304rem;
+.coupon {
+  z-index: 4;
+  width: 12.58rem;
+  position: fixed;
+  height: 10rem;
+  top: 50%;
+  left: 50%;
+  background: #191d33;
+  margin-top: -5.10869565rem;
+  margin-left: -6.7173913rem;
+  border-radius: 0.2rem;
 }
-.cou_thr p{
-     line-height: 0.782608695652174rem;
-     font-size: 0.6086956521739131rem;
-     color: #ffd472;
-     width: 11.304347826086957rem;
-     margin-left: 1.0869565217391304rem;
-     text-align: center;
+.cou_tit {
+  width: 100%;
+  text-align: center;
+  color: #ffd472;
+  font-size: 0.8rem;
+  height: 2.58rem;
+  line-height: 2.58rem;
+}
+.pon {
+  margin: 0 auto;
+  background-size: 100% 100%;
+  width: 9.98rem;
+  height: 3.64rem;
+  background-image: url(../img/li_bg.png);
+}
+.pon p {
+  display: block;
+  width: 100%;
+  height: 2.16rem;
+  text-indent: 0.94rem;
+  font-size: 0.68rem;
+  color: #a35014;
+  line-height: 2.16rem;
+}
+.pon_di {
+  width: 100%;
+  height: 0.64rem;
+  overflow: hidden;
+}
+.pon_di a {
+  font-size: 0.54rem;
+  color: #c07e42;
+}
+.pon_di a:first-child {
+  margin-left: 1rem;
+  float: left;
+}
+.pon_di a:last-child {
+  margin-right: 1rem;
+  float: right;
+}
+.rightoff {
+  width: 9.56rem;
+  height: 1.98rem;
+  margin: 0.78rem auto;
+  border-radius: 0.96rem;
+  background: #e62233;
+  text-align: center;
+  line-height: 1.98rem;
+  font-size: 0.76rem;
+  color: white;
+}
+.cuo {
+  width: 1.54rem;
+  height: 1.54rem;
+  position: absolute;
+  top: 0.5rem;
+  background: url(../img/gen.png) no-repeat;
+  background-size: 2.24rem;
+}
+.doubt {
+  width: 1.54rem;
+  height: 1.54rem;
+  position: absolute;
+  top: 0.5rem;
+  right: 0;
+  background: url(../img/gen.png) no-repeat -0.5rem -1.78rem;
+  background-size: 2.24rem;
+}
+.cou_thr,
+.bg,
+.coupon,
+.cou_two {
+  display: none;
+}
+.two_tit {
+  height: 0.96rem;
+  line-height: 0.96rem;
+  font-size: 0.56rem;
+  color: #ffd472;
+  width: 10.58rem;
+  margin-left: 1rem;
+}
+.cou_two p {
+  line-height: 0.72rem;
+  font-size: 0.56rem;
+  color: #ffd472;
+  width: 10.58rem;
+  margin-left: 1rem;
+}
+.cou_thr p {
+  line-height: 0.72rem;
+  font-size: 0.56rem;
+  color: #ffd472;
+  width: 10.58rem;
+  margin-left: 1rem;
+  text-align: center;
+}
+.zhan {
+  height: 4rem;
 }
