--- a/css/public.css
+++ b/css/public.css
@@ -1,115 +1,127 @@
-*{
-     margin: 0;
-     padding: 0;
-     font-family: "微软雅黑";
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "微软雅黑";
 }
- body{
-     position: relative;
-     overflow-x:hidden ;
+body {
+  position: relative;
+  overflow-x: hidden ;
 }
-html,body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
-.wrapper{
-    height: 100%;
+.wrapper {
+  height: 100%;
 }
- a{
-     text-decoration: none;
-     cursor: pointer;
-     -webkit-tap-highlight-color:rgba(255,0,0,0) 
+a {
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
- img{
-     width: 100%;
-     height: 100%;
+img {
+  width: 100%;
+  height: 100%;
 }
-div{ cursor: pointer;}
-li{list-style: none; cursor: pointer; cursor: pointer;}
-span{ cursor: pointer;}
-input[type=submit],input[type=reset],input[type=button],input[type=text]{-webkit-appearance:none; outline: none;}
- .blue{
-     color: #4285f4 !important;
+div {
+  cursor: pointer;
 }
-.blue_four{
-	border: 4px solid #4285f4;
+li {
+  list-style: none;
+  cursor: pointer;
 }
- .small{
-     font-size: 0.5217391304347826rem;
+span {
+  cursor: pointer;
 }
-.head{
-     width: 100%;
-     height: 2.0217391304347827rem;
-     position: fixed;
-     top: 0;
-     left: 0;
-     background: white;
-     z-index: 2;
-     box-shadow: 0px 2px 0.426666rem 0px rgba(66, 133, 244, 0.2);
+input[type=submit],
+input[type=reset],
+input[type=button],
+input[type=text] {
+  -webkit-appearance: none;
+  outline: none;
 }
- .head_sou{
-     width: 14.565217391304348rem;
-     height: 1.3043478260869565rem;
-     text-indent: 1.46rem;
-     border-radius: 0.6086956521739131rem;
-     position: absolute;
-     background:#f0f0f0 url(../img/currency.png) no-repeat 0.5rem -4.65rem;
-     background-size: 0.87rem;
-     top: 50%;
-     left: 50%;
-     overflow: hidden;
-     margin-left: -7.282608695652174rem;
-     margin-top: -0.6521739130434783rem;
-     color: #999;
-     font-size: 0.6521739130434783rem;
-     line-height: 1.3043478260869565rem;
+.blue {
+  color: #4285f4 !important;
 }
-
- footer{
-     width: 100%;
-     height: 2.1739130434782608rem;
-     position: fixed;
-     bottom: 0;
-     background: white;
-     z-index: 2;
-     box-shadow: 0px 2px 0.426666rem 0px rgba(66, 133, 244, 0.2);
+.blue_four {
+  border: 4px solid #4285f4;
 }
- footer dl{
-     width: 25%;
-     height: 100%;
-     text-align: center;
-     float: left;
+.small {
+  font-size: 0.48rem;
 }
- footer dl dt{
-     width: 100%;
-     height: 0.7391304347826086rem;
-     margin-top: 0.41304347826086957rem;
-     overflow: hidden;
+.head {
+  width: 100%;
+  height: 1.88rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: white;
+  z-index: 2;
+  box-shadow: 0px 2px 0.38rem 0px rgba(66, 133, 244, 0.2);
 }
- footer dl img{
-     display: block;
-     margin:0 auto ;
+.head_sou {
+  width: 13.64rem;
+  height: 1.22rem;
+  text-indent: 1.36rem;
+  border-radius: 0.56rem;
+  position: absolute;
+  background: #f0f0f0 url(../img/currency.png) no-repeat 0.46rem -4.34rem;
+  background-size: 0.8rem;
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  margin-left: -6.82rem;
+  margin-top: -0.6rem;
+  color: #999;
+  font-size: 0.6rem;
+  line-height: 1.22rem;
 }
- footer dl dd{
-     line-height: 0.8695652173913043rem;
-     height: 0.8695652173913043rem;
-     width: 100%;
-     text-align: center;
-     color: #999999;
-     font-size: 0.4782608695652174rem;
+footer {
+  width: 100%;
+  height: 2.02rem;
+  position: fixed;
+  bottom: 0;
+  background: white;
+  z-index: 2;
+  box-shadow: 0px 2px 0.38rem 0px rgba(66, 133, 244, 0.2);
 }
- footer dl:first-child img{
-    width: 1rem;
-    height: 0.869565217391305rem;
+footer dl {
+  width: 25%;
+  height: 100%;
+  text-align: center;
+  float: left;
 }
- footer dl:nth-child(2) img{
-     width: 0.782608695652174rem;
-     height: 0.717391304347826rem;
+footer dl dt {
+  width: 100%;
+  height: 0.68rem;
+  margin-top: 0.38rem;
+  overflow: hidden;
 }
- footer dl:nth-child(3) img{
-    width: 0.8739130434782609rem;
-    height: 0.8391304347826086rem;
+footer dl img {
+  display: block;
+  margin: 0 auto ;
 }
- footer dl:last-child img{
-    width: 0.8739130434782609rem;
-    height: 0.9391304347826086rem;
+footer dl dd {
+  line-height: 0.8rem;
+  height: 0.8rem;
+  width: 100%;
+  text-align: center;
+  color: #999999;
+  font-size: 0.44rem;
 }
- 
+footer dl:first-child img {
+  width: 1rem;
+  height: 0.8rem;
+}
+footer dl:nth-child(2) img {
+  width: 0.72rem;
+  height: 0.66rem;
+}
+footer dl:nth-child(3) img {
+  width: 0.8rem;
+  height: 0.78rem;
+}
+footer dl:last-child img {
+  width: 0.8rem;
+  height: 0.88rem;
+}
